--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <body>
     <table  cellspacing="20">
       <tr>
-        <td>  <img src="
-                 pro.png" alt="ffjj">  </td>
+        <td>  <img src="pro.png" alt="ffjj">  </td>
         <td> <h1>فرشته جودی</h1>
           <p><em>مهارتجوی رشته <strong><a href="https://www.ketabrah.ir/users/signin">طراحی سایت</a> </strong></em></p>
           <p>من درآموزشگاه <b><a href="https://rasta-it.ir/">رستا</a></b> مشغول به تحصیل هستم</p></td>
