--- a/maried.html
+++ b/maried.html
@@ -10,8 +10,8 @@
     <h1>متاهل</h1>
     <table>
         <tr>
-            <td> <img src="pic/mf1.png" alt=""></td> 
-            <td>  <img src="pic/fm1.png" alt=""></td>
+            <td> <img src="mf1.png" alt=""></td> 
+            <td>  <img src="fm1.png" alt=""></td>
         </tr>
     </table>
   
