--- a/childeren.html
+++ b/childeren.html
@@ -9,11 +9,11 @@
     <h1><em>دودختر</em></h1>
     <table  cellspacing="20">
         <tr>
-            <td><img src="pic/mobinam.png" alt="mobina-profil"></td>
+            <td><img src="mobinam.png" alt="mobina-profil"></td>
             <td><h1>mobina</h1></td>
         </tr>
         <tr>
-            <td> <img src="pic/hanam1.png" alt="hana-profil "></td>
+            <td> <img src="hanam1.png" alt="hana-profil "></td>
             <td><h1>hanane</h1></td>
         </tr>
 
